# stm32f3-demo

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
