[package]
name = "stm32f3-demo"
version = "0.1.0"
authors = ["Artem Kostin <artem.1.kostin@gmail.com>"]
edition = "2021"

[dependencies]
# These are fundamental cortex-m support crates
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"

[dependencies.stm32f3]
version = "0.14.0"
# Edit this feature to change which STM32F3 device you are using
features = ["stm32f303"]

[profile.release]
# Many of these settings are recommended for embedded work
codegen-units = 1
incremental = false
debug = true
lto = true
